--- a/data/sources/coderetreat-cz.yaml
+++ b/data/sources/coderetreat-cz.yaml
@@ -6,11 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
   events:
   - meetupcom:
-      meta_description: 'Sat, Nov 7, 8:00 AM: Rok 2020 moc nepřeje osobním setkáním a když už se nemůže setkat osobně, zkusíme to aspoň online.
-
-
-        Global Day of Codertreat, https://www.coderetreat.org je takovým malým sv'
-      og_title: Global Day of Coderetreat 2020 - ČR, Online | Meetup
+      meta_description: 'Sat, Nov 7, 2020, 9:00 AM: Rok 2020 moc nepřeje osobním setkáním a když už se nemůže setkat osobně, zkusíme to aspoň online.Global Day of Codertreat, https://www.coderetreat.org je takovým malým svátk'
+      og_title: Global Day of Coderetreat 2020 - ČR, Online
       image: https://secure.meetupstatic.com/photos/event/9/5/0/3/600_492998147.jpeg
       url: https://www.meetup.com/CodeRetreat-CZ/events/273897052/
       ical:
@@ -109,11 +106,8 @@ series:
         dtstart: 2018-11-17 09:00:00+01:00
         dtend: 2018-11-17 18:00:00+01:00
   - meetupcom:
-      meta_description: 'Sat, Nov 13, 8:00 AM: Změna: Původně jsme to plánovali dát offline. Bohužel epidemická situace se opět zhoršuje, přecházíme proto jako loni na online verzi Coderetreatu.
-
-
-        Zveme vás na jednodenní'
-      og_title: Global Day of Coderetreat 2021 - Online | Meetup
+      meta_description: 'Sat, Nov 13, 2021, 9:00 AM: Změna: Původně jsme to plánovali dát offline. Bohužel epidemická situace se opět zhoršuje, přecházíme proto jako loni na online verzi Coderetreatu.Zveme vás na jednodenní i'
+      og_title: Global Day of Coderetreat 2021 - Online
       image: https://secure.meetupstatic.com/photos/event/3/d/7/f/600_466095743.jpeg
       url: https://www.meetup.com/CodeRetreat-CZ/events/281417882/
       ical:
