--- a/data/sources/fsharping.yaml
+++ b/data/sources/fsharping.yaml
@@ -6,8 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Aug 4, 4:00 PM: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects, and other great things (not only) from the IT world a'
-      og_title: FSharping |> Beer | Meetup
+      meta_description: 'Wed, Aug 4, 2021, 6:00 PM: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects, and other great things (not only) from the IT world an'
+      og_title: FSharping |> Beer
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
       url: https://www.meetup.com/FSharping/events/279609755/
       ical:
@@ -30,8 +30,8 @@ series:
         dtstart: 2021-08-04 18:00:00+02:00
         dtend: 2021-08-04 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 19, 4:00 PM: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects and other great things (not only) from IT world and fu'
-      og_title: FSharping |> Beer | Meetup
+      meta_description: 'Wed, Aug 19, 2020, 6:00 PM: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects and other great things (not only) from IT world and fu'
+      og_title: FSharping |> Beer
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
       url: https://www.meetup.com/FSharping/events/271789552/
       ical:
@@ -54,8 +54,8 @@ series:
         dtstart: 2020-08-19 18:00:00+02:00
         dtend: 2020-08-19 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Jun 5, 9:00 AM: 5. června nás čeká již třetí ročník virtuální konference fsharpConf, organizované lidmi z @fsharponline. Můžete se těšit na F# experty z celého světa. Uvidíte praktické vyu'
-      og_title: fsharpConf 2020 | Meetup
+      meta_description: 'Fri, Jun 5, 2020, 11:00 AM: 5. června nás čeká již třetí ročník virtuální konference fsharpConf, organizované lidmi z @fsharponline. Můžete se těšit na F# experty z celého světa. Uvidíte praktické vyu'
+      og_title: fsharpConf 2020
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
       url: https://www.meetup.com/FSharping/events/270899664/
       ical:
@@ -79,16 +79,8 @@ series:
         dtstart: 2020-06-05 11:00:00+02:00
         dtend: 2020-06-05 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Feb 25, 5:00 PM: We would like to invite you to our very first FShaping Functional Programming workshop.
-
-
-        ==== Basic information ====
-
-
-        Workshop is planned for 3 hours.
-
-        We will start at 18:0'
-      og_title: 'Josef Starýchfojtů: Advanced FP in F# (Workshop) | Meetup'
+      meta_description: 'Tue, Feb 25, 2020, 6:00 PM: We would like to invite you to our very first FShaping Functional Programming workshop.==== Basic information ====Workshop is planned for 3 hours.We will start at 18:00! (W'
+      og_title: 'Josef Starýchfojtů: Advanced FP in F# (Workshop)'
       image: https://secure.meetupstatic.com/photos/event/c/0/0/b/600_459109163.jpeg
       url: https://www.meetup.com/FSharping/events/268054108/
       ical:
