--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -6,14 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/7/6/6/f/600_456450319.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Jul 21, 4:00 PM: Little update: We arranged small refreshments on the grill!
-
-
-        Dear friends,
-
-
-        After a long time (almost a year!), let''s meet in person! Usually, we don''t organize meetups in '
-      og_title: MLMU Beer & grill & chat | Meetup
+      meta_description: 'Wed, Jul 21, 2021, 6:00 PM: Little update: We arranged small refreshments on the grill!Dear friends,After a long time (almost a year!), let''s meet in person! Usually, we don''t organize meetups in summ'
+      og_title: MLMU Beer & grill & chat
       image: https://secure.meetupstatic.com/photos/event/7/6/6/f/600_456450319.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/279295286/
       ical:
@@ -36,8 +30,8 @@ series:
         dtstart: 2021-07-21 18:00:00+02:00
         dtend: 2021-07-21 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 24, 5:00 PM: The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs the lines that tradition'
-      og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art | Meetup'
+      meta_description: 'Thu, Jun 24, 2021, 7:00 PM: The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs the lines that tradition'
+      og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
       image: https://secure.meetupstatic.com/photos/event/c/e/3/6/600_496912790.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278824055/
       ical:
@@ -61,8 +55,8 @@ series:
         dtstart: 2021-06-24 19:00:00+02:00
         dtend: 2021-06-24 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 7, 5:30 PM: We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discu'
-      og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI | Meetup'
+      meta_description: 'Mon, Jun 7, 2021, 7:30 PM: We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discus'
+      og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI'
       image: https://secure.meetupstatic.com/photos/event/d/4/a/5/600_496614437.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278523645/
       ical:
@@ -111,11 +105,8 @@ series:
         dtstart: 2021-05-26 18:00:00+02:00
         dtend: 2021-05-26 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 4:00 PM: Přednáška bude online na YouTube a v češtině!
-
-
-        Výběr vhodného nástroje pro provoz ML modelů je jedním z kritických rozhodnutí při návrhu produkční infrastruktury. Srovnali '
-      og_title: 'MLMU Online#16: Kvantitativní porovnání platforem pro produkční provoz ML modelů | Meetup'
+      meta_description: 'Thu, Oct 14, 2021, 6:00 PM: Přednáška bude online na YouTube a v češtině!Výběr vhodného nástroje pro provoz ML modelů je jedním z kritických rozhodnutí při návrhu produkční infrastruktury. Srovnali js'
+      og_title: 'MLMU Online#16: Kvantitativní porovnání platforem pro produkční provoz ML modelů'
       image: https://secure.meetupstatic.com/photos/event/4/1/4/0/600_499336704.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/281293821/
       ical:
