--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -131,14 +131,8 @@ series:
         dtstart: 2021-03-31 18:30:00+02:00
         dtend: 2021-03-31 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 4:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
-
-
-        📢 Program (anotace níže):
-
-
-        – 18:30 Úvodní slovo a novinky ze světa Wor'
-      og_title: 'WordPress pivo #6 | Meetup'
+      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program (anotace níže):– 18:30 Úvodní slovo a novinky ze světa WordPre'
+      og_title: 'WordPress pivo #6'
       image: https://secure.meetupstatic.com/photos/event/6/4/e/c/600_499585836.jpeg
       url: https://www.meetup.com/naswp-cz/events/281506962/
       ical:
@@ -162,14 +156,8 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 5:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
-
-
-        📢 Program bude upřesněn.
-
-
-        – 18:30 Úvodní slovo a novinky ze světa Word'
-      og_title: 'WordPress Pivo #7 | Meetup'
+      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.– 18:30 Úvodní slovo a novinky ze světa WordPres'
+      og_title: 'WordPress Pivo #7'
       image: https://secure.meetupstatic.com/photos/event/6/5/4/f/600_499585935.jpeg
       url: https://www.meetup.com/naswp-cz/events/281507008/
       ical:
