--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -6,8 +6,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/2/2/8/5/600_473768837.jpeg
   events:
   - meetupcom:
-      meta_description: 'Tue, Aug 3, 5:00 PM: Podíváme se na zoubek nástrojům, které časem ztratily svůj význam a dnes už jsou přežité.'
-      og_title: Jednoduše a rychle | Meetup
+      meta_description: 'Tue, Aug 3, 2021, 7:00 PM: Podíváme se na zoubek nástrojům, které časem ztratily svůj význam a dnes už jsou přežité.'
+      og_title: Jednoduše a rychle
       image: https://secure.meetupstatic.com/photos/event/1/2/3/7/600_497884663.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/279829674/
       ical:
@@ -31,8 +31,8 @@ series:
         dtstart: 2021-08-03 19:00:00+02:00
         dtend: 2021-08-03 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 13, 5:00 PM: Jirka Jansa a Jirka Pénzeš prozradí své osobní zkušenosti z údržby a vývoje legacy systému. Zároveň se podíváme i na best practices a různé cesty, které se dají při vývoji '
-      og_title: Legacy | refactoring 2021 | Meetup
+      meta_description: 'Tue, Jul 13, 2021, 7:00 PM: Jirka Jansa a Jirka Pénzeš prozradí své osobní zkušenosti z údržby a vývoje legacy systému. Zároveň se podíváme i na best practices a různé cesty, které se dají při vývoji '
+      og_title: Legacy | refactoring 2021
       image: https://secure.meetupstatic.com/photos/event/a/b/d/600_497402749.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/279359705/
       ical:
@@ -105,11 +105,8 @@ series:
         dtstart: 2021-05-04 19:00:00+02:00
         dtend: 2021-05-04 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 5, 5:00 PM: Tentokrát se podíváme na adrenalinové sporty. Hledáte nějaký netechnický koníček? Přijďte načerpat inspiraci!
-
-
-        Sledovat nás můžete jako vždy i živě na: https://zive.tv/topm'
-      og_title: Adrenalinové sporty | Meetup
+      meta_description: 'Tue, Oct 5, 2021, 7:00 PM: Tentokrát se podíváme na adrenalinové sporty. Hledáte nějaký netechnický koníček? Přijďte načerpat inspiraci!Sledovat nás můžete jako vždy i živě na: https://zive.tv/topmonk'
+      og_title: Adrenalinové sporty
       image: https://secure.meetupstatic.com/photos/event/1/3/b/0/600_499265040.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/281139148/
       ical:
@@ -133,8 +130,8 @@ series:
         dtstart: 2021-10-05 19:00:00+02:00
         dtend: 2021-10-05 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 2, 6:00 PM: Jak dělat produkt management pro netradiční produkty?'
-      og_title: Product management | Meetup
+      meta_description: 'Tue, Nov 2, 2021, 7:00 PM: Jak dělat produkt management pro netradiční produkty?'
+      og_title: Product management
       image: https://secure.meetupstatic.com/photos/event/a/5/8/6/600_499782374.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/281672705/
       ical:
