--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -303,14 +303,8 @@ series:
         dtstart: 2021-10-26 18:30:00+02:00
         dtend: 2021-10-26 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 2, 4:30 PM: Good for:
-
-        - Beginners to TypeDB and TypeQL.
-
-        - Those who have been using TypeDB and want a refresher on schema and TypeQL.
-
-        - Experienced data analysts and software engineers'
-      og_title: TypeDB Academy - Getting Started with Schema Design | Meetup
+      meta_description: 'Tue, Nov 2, 2021, 5:30 PM: Good for:- Beginners to TypeDB and TypeQL.- Those who have been using TypeDB and want a refresher on schema and TypeQL.- Experienced data analysts and software engineers.- T'
+      og_title: TypeDB Academy - Getting Started with Schema Design
       image: https://secure.meetupstatic.com/photos/event/6/8/f/e/600_499286878.jpeg
       url: https://www.meetup.com/typedb-prague/events/281226735/
       ical:
@@ -359,8 +353,8 @@ series:
         dtstart: 2021-11-09 18:30:00+01:00
         dtend: 2021-11-09 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Nov 9, 5:30 PM: Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much bigger user load, and'
-      og_title: Scaling TypeDB for the Enterprise | TypeDB Cluster | Meetup
+      meta_description: 'Tue, Nov 9, 2021, 6:30 PM: Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much bigger user load, and '
+      og_title: Scaling TypeDB for the Enterprise | TypeDB Cluster
       image: https://secure.meetupstatic.com/photos/event/1/e/9/3/600_497827827.jpeg
       url: https://www.meetup.com/typedb-prague/events/281589722/
       ical:
@@ -384,8 +378,8 @@ series:
         dtstart: 2021-11-09 18:30:00+01:00
         dtend: 2021-11-09 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 10, 5:30 PM: Graph databases have matured into mainstream technologies and deliver tremendous value to organisations across any industry. They are more flexible than traditional relatio'
-      og_title: Comparing Labeled Property Graphs (Graph Databases) to TypeDB | Meetup
+      meta_description: 'Wed, Nov 10, 2021, 6:30 PM: Graph databases have matured into mainstream technologies and deliver tremendous value to organisations across any industry. They are more flexible than traditional relatio'
+      og_title: Comparing Labeled Property Graphs (Graph Databases) to TypeDB
       image: https://secure.meetupstatic.com/photos/event/c/d/6/a/600_497332586.jpeg
       url: https://www.meetup.com/typedb-prague/events/280962191/
       ical:
@@ -409,11 +403,8 @@ series:
         dtstart: 2021-11-10 18:30:00+01:00
         dtend: 2021-11-10 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 5:30 PM: How might we utilise an actor-based execution model to build a powerful yet elegant reasoning engine?
-
-
-        We''ll visit the key ideas behind actors, and then walk through how we'
-      og_title: Reasoner Meet Actors | TypeDB's Native Reasoning Engine | Meetup
+      meta_description: 'Thu, Nov 11, 2021, 6:30 PM: How might we utilise an actor-based execution model to build a powerful yet elegant reasoning engine?We''ll visit the key ideas behind actors, and then walk through how we b'
+      og_title: Reasoner Meet Actors | TypeDB's Native Reasoning Engine
       image: https://secure.meetupstatic.com/photos/event/1/6/7/f/600_498365759.jpeg
       url: https://www.meetup.com/typedb-prague/events/280962390/
       ical:
@@ -436,8 +427,8 @@ series:
         dtstart: 2021-11-11 18:30:00+01:00
         dtend: 2021-11-11 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Nov 16, 5:30 PM: Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tools that enable computational and non-co'
-      og_title: Enabling the Computational Future of Biology | Meetup
+      meta_description: 'Tue, Nov 16, 2021, 6:30 PM: Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tools that enable computational and non-co'
+      og_title: Enabling the Computational Future of Biology
       image: https://secure.meetupstatic.com/photos/event/1/e/c/9/600_496987881.jpeg
       url: https://www.meetup.com/typedb-prague/events/280963860/
       ical:
