--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -6,8 +6,14 @@ series:
     image: https://secure.meetupstatic.com/photos/event/1/2/1/6/600_498544630.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 13, 2021, 6:00 PM: (CZ): První online i offline akce zároveň!Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."Online budeme vysílat na youtube https://youtu.be/Ng0LkAeO1I0 , offli'
-      og_title: ONLINE/OFFLINE říjnový Frontedisti.cz, Wed, Oct 13, 2021, 6:00 PM
+      meta_description: 'Wed, Oct 13, 4:00 PM: (CZ): První online i offline akce zároveň!
+
+
+        Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."
+
+
+        Online budeme vysílat na youtube https://youtu.be/Ng0LkAeO1I0 , o'
+      og_title: ONLINE/OFFLINE říjnový Frontedisti.cz | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/d/9/9/600_499424441.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccnbrb/
       ical:
@@ -31,18 +37,26 @@ series:
         dtstart: 2021-10-13 18:00:00+02:00
         dtend: 2021-10-13 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 10, 2021, 6:30 PM: We look forward to seeing you at Pipedrive in Prague! This time mainly in English.TALKS:— Michael Possumato (Netflix) [Remote talk] — Approach to Micro FE at Netflix— Tomas'
-      og_title: 'Meetup in Prague: MicroFrontends in Netflix, Bitcoin hardware wallets…|, Wed, Nov 10, 2021, 6:30 PM'
+      meta_description: 'Wed, Nov 10, 5:00 PM: We look forward to seeing you at Pipedrive in Prague! Only in English this time.
+
+
+        18:00 - Door open - Pipedrive, Prague
+
+        18:30 - LIVE STREAM
+
+
+        18:35 - Quick intro into the wo'
+      og_title: 'Meetup in Prague: Bitcoin wallets, Smart TVs testing & MicroFrontends in Netflix | Meetup'
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccpbnb/
       ical:
-        summary: 'Meetup in Prague: MicroFrontends in Netflix, Bitcoin hardware wallets…|'
+        summary: 'Meetup in Prague: Bitcoin wallets, Smart TVs testing & MicroFrontends in Netflix'
         description: 'Frontendisti.cz
 
-          Wednesday, November 10 at 6:30 PM
+          Wednesday, November 10 at 6:00 PM
 
 
-          We look forward to seeing you at Pipedrive in Prague! This time mainly in English. TALKS: — Michael Possumato (Netflix)  — Approach to Micro FE at Net...
+          We look forward to seeing you at Pipedrive in Prague! Only in English this time. 18:00 - Door open - Pipedrive, Prague18:30 - LIVE STREAM 18:35 - Quic...
 
 
           https://www.meetup.com/frontendisti/events/280531794/'
@@ -53,11 +67,11 @@ series:
         status: CONFIRMED
         uid: event_mbjhpsyccpbnb@meetup.com
         url: https://www.meetup.com/frontendisti/events/280531794/
-        dtstart: 2021-11-10 18:30:00+01:00
-        dtend: 2021-11-10 20:30:00+01:00
+        dtstart: 2021-11-10 18:00:00+01:00
+        dtend: 2021-11-10 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Dec 8, 2021, 7:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každo'
-      og_title: Meetup Frontedisti.cz, Wed, Dec 8, 2021, 7:00 PM
+      meta_description: 'Wed, Dec 8, 6:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
+      og_title: Meetup Frontedisti.cz | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccqblb/
       ical:
@@ -81,8 +95,8 @@ series:
         dtstart: 2021-12-08 19:00:00+01:00
         dtend: 2021-12-08 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 12, 2022, 7:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
-      og_title: Meetup Frontedisti.cz, Wed, Jan 12, 2022, 7:00 PM
+      meta_description: 'Wed, Jan 12, 6:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
+      og_title: Meetup Frontedisti.cz | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsydccbqb/
       ical:
@@ -155,18 +169,24 @@ series:
         dtstart: 2022-02-09 19:00:00+01:00
         dtend: 2022-02-09 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 10, 2021, 6:30 PM: Online stream for meetup from Pipedrive in Prague. This time mainly in English:— Michael Possumato (Netflix) [Remote talk] — Approach to Micro FE at Netflix— Tomas Susanka '
-      og_title: 'Online stream: MicroFrontends in Netflix, Bitcoin hardware wallets…'
+      meta_description: 'Wed, Nov 10, 5:30 PM: Online stream for meetup from Pipedrive in Prague. This time mainly in English:
+
+
+        18:30 - LIVE STREAM - https://www.youtube.com/watch?v=zE75vOR4iDM
+
+
+        18:35 - Quick intro into'
+      og_title: 'Online stream: Bitcoin wallets, Smart TVs testing & MicroFrontends in Netflix | Meetup'
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/281587897/
       ical:
-        summary: 'Online stream: MicroFrontends in Netflix, Bitcoin hardware wallets…'
+        summary: 'Online stream: Bitcoin wallets, Smart TVs testing & MicroFrontends in Netflix'
         description: 'Frontendisti.cz
 
           Wednesday, November 10 at 6:30 PM
 
 
-          Online stream for meetup from Pipedrive in Prague. This time mainly in English: — Michael Possumato (Netflix)  — Approach to Micro FE at Netflix— Toma...
+          Online stream for meetup from Pipedrive in Prague. This time mainly in English: 18:30 - LIVE STREAM - https://www.youtube.com/watch?v=zE75vOR4iDM 18:3...
 
 
           https://www.meetup.com/frontendisti/events/281587897/'
