--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -182,7 +182,7 @@ series:
         dtend: 2021-11-22 20:30:00+01:00
   - meetupcom:
       meta_description: 'Mon, Oct 25, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
-      og_title: GDG Garage Prague One, Mon, Oct 25, 2021, 6:30 PM
+      og_title: GDG Garage Prague One
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccnbhc/
       ical:
